# ArgoAgent

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: comprehensive_demo.py  demo.py  test_log.py  test_mcp_client.py  test_rag.py  test_tool.py  test_workflow.py  tooltest.py  workflow.py
examples/Features/TEST/scripts/: tool_demo.py  workflow_demo.py
examples/scripts/: basic_agent.py  tool_show.py
src/argoagent/agent/: agent.py
src/argoagent/context/: log_context.py
src/argoagent/core/: agent.py  context.py  llm.py
src/argoagent/llm/: __init__.py  doubao_llm.py  openai_llm.py
src/argoagent/rag/: embedding_retriever.py  vector_store.py
src/argoagent/tools/: base.py  calculator.py  echo.py  fetch.py  registry.py
src/argoagent/tools/builtins/: echo.py  fetch.py  filesystem.py
src/argoagent/utils/: html_parser.py
src/argoagent/workflows/: base.py  human_in_loop.py  loop.py  parallel.py  router.py  single_step.py
